--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "concert-tracker",
   "version": "1.0.0",
   "description": "An app that tracks your favorite bands and the concerts you have attended",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -25,6 +25,7 @@
   "dependencies": {
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
+    "mongoose": "^4.4.11",
     "nodemon": "^1.9.1"
   }
 }
