--- a/package.json
+++ b/package.json
@@ -24,8 +24,13 @@
   "homepage": "https://github.com/matthewvilhauer/concert-tracker#readme",
   "dependencies": {
     "body-parser": "^1.15.0",
+    "cookie-parser": "^1.4.1",
     "express": "^4.13.4",
+    "express-session": "^1.13.0",
     "mongoose": "^4.4.11",
-    "nodemon": "^1.9.1"
+    "nodemon": "^1.9.1",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^4.0.0"
   }
 }
